Followup to bug #9100: Fix overlap issues with Flexform sections.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@2525 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_formsOnPage.css
+++ b/feeditadvanced/res/css/fe_formsOnPage.css
@@ -147,6 +147,14 @@ table.typo3-TCEforms select.formField {
 	margin-left: 12px;
 }
 
+.formsOnPage .typo3-TCEforms-flexForm {
+	padding: 12px;
+}
+
+.formsOnPage td.class-main23 table.t3-form-field-header-flexsection {
+	margin-left: 0;
+}
+
 .formsOnPage #typo3-tree td img,
 .formsOnPage #typo3-tree td a {
 	border-width: 0 !important;
